changed css so that nav bar displays correctly on mobile devices

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -52,16 +52,12 @@
   }
 
   @include media-query($on-palm) {
-    position: absolute;
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
-    border: 1px solid $grey-color-light;
-    border-radius: 5px;
     text-align: right;
 
     .menu-icon {
-      display: block;
       float: right;
       width: 36px;
       height: 26px;
@@ -79,18 +75,8 @@
       }
     }
 
-    .trigger {
-      clear: both;
-      display: none;
-    }
-
-    &:hover .trigger {
-      display: block;
-      padding-bottom: 5px;
-    }
-
     .page-link {
-      display: block;
+      display: inline-block;
       padding: 5px 10px;
 
       &:not(:last-child) {
